; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/bfs/extr_inode.c_bfs_alloc_inode.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/bfs/extr_inode.c_bfs_alloc_inode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.inode = type { i32 }
%struct.super_block = type { i32 }
%struct.bfs_inode_info = type { %struct.inode }

@bfs_inode_cachep = common dso_local global i32 0, align 4
@GFP_KERNEL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.inode* (%struct.super_block*)* @bfs_alloc_inode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.inode* @bfs_alloc_inode(%struct.super_block* %0) #0 {
  %2 = alloca %struct.inode*, align 8
  %3 = alloca %struct.super_block*, align 8
  %4 = alloca %struct.bfs_inode_info*, align 8
  store %struct.super_block* %0, %struct.super_block** %3, align 8
  %5 = load i32, i32* @bfs_inode_cachep, align 4
  %6 = load i32, i32* @GFP_KERNEL, align 4
  %7 = call %struct.bfs_inode_info* @kmem_cache_alloc(i32 %5, i32 %6)
  store %struct.bfs_inode_info* %7, %struct.bfs_inode_info** %4, align 8
  %8 = load %struct.bfs_inode_info*, %struct.bfs_inode_info** %4, align 8
  %9 = icmp ne %struct.bfs_inode_info* %8, null
  br i1 %9, label %11, label %10

10:                                               ; preds = %1
  store %struct.inode* null, %struct.inode** %2, align 8
  br label %14

11:                                               ; preds = %1
  %12 = load %struct.bfs_inode_info*, %struct.bfs_inode_info** %4, align 8
  %13 = getelementptr inbounds %struct.bfs_inode_info, %struct.bfs_inode_info* %12, i32 0, i32 0
  store %struct.inode* %13, %struct.inode** %2, align 8
  br label %14

14:                                               ; preds = %11, %10
  %15 = load %struct.inode*, %struct.inode** %2, align 8
  ret %struct.inode* %15
}

declare dso_local %struct.bfs_inode_info* @kmem_cache_alloc(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
